# SelfAlign

./: .gitignore  DECISIONS.md  Makefile  Milestone1.MD  README.md  pyproject.toml
.github/workflows/: ci-baseline.yml
configs/eval/: golden_v0.README.md  golden_v0.jsonl
configs/personas/: neutral_concise.yaml  socratic_skeptical.yaml
selfalign/: __init__.py  cli.py
selfalign.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
selfalign/dataops/: __init__.py  dedup.py  filter.py  synth.py
selfalign/eval/: harness.py  metrics.py
selfalign/persona/: schema.py
selfalign/runtime/: __init__.py  loader.py
selfalign/train/: sft.py
selfalign/utils/: io.py  logging.py  seed.py  text.py
tests/: test_eval_phase2.py  test_persona_schema.py
